--- a/junit4/build.xml
+++ b/junit4/build.xml
@@ -17,6 +17,7 @@
         <include name="**/junit-4.12.jar" />
         <include name="**/hamcrest-core-1.3.jar" />
         <include name="**/assertj-core-1.7.1.jar" />
+        <include name="**/spring-*-4.3.2.RELEASE.jar" />
     </fileset>
 
     <!-- Targets -->
